--- a/CSS/style.css
+++ b/CSS/style.css
@@ -127,3 +127,96 @@ body {
   margin-bottom: 15px;
   transition: fill 0.4s;
 }
+.offer {
+  border: 1px solid #c5c9d5;
+  padding: 30px;
+  border-radius: 10px;
+  margin-bottom: 20px;
+}
+.offer-avatar {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  border: 1px solid #f2f3f6;
+  background: #fff url("../img/logo-company.png") no-repeat center/ contain;
+}
+.offer-title {
+  margin-left: 20px;
+}
+.offer-heading {
+  font-size: 16px;
+  line-height: 19px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+.offer-place {
+  font-size: 14px;
+  line-height: 17px;
+}
+.salary {
+  margin-left: 46px;
+  margin-right: 62px;
+  font-size: 16px;
+  line-height: 19px;
+  font-weight: bold;
+  background: #1a75e8;
+  border-radius: 5px;
+  padding: 10px 25px;
+  color: #ffffff;
+}
+.more {
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
+  color: #1a75e8;
+  text-decoration: none;
+  margin-left: auto;
+  margin-right: 25px;
+}
+.subsc {
+  background: #f2f3f6;
+}
+.subsc-form {
+  max-width: 460px;
+  margin: auto;
+  text-align: center;
+}
+.subsc-title {
+  font-size: 36px;
+  line-height: 43px;
+  margin-bottom: 20px;
+}
+.subsc-subtitle {
+  font-size: 18px;
+  line-height: 140%;
+  margin-bottom: 40px;
+}
+.footer {
+  padding-top: 70px;
+  padding-bottom: 100px;
+}
+.footer-text,
+.footer-copy {
+  font-size: 12px;
+  line-height: 140%;
+  color: #b2b2b2;
+}
+.footer-title {
+  margin-top: 0;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 19px;
+  margin-bottom: 15px;
+}
+.footer-list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+.footer-list-link {
+  display: block;
+  margin-bottom: 10px;
+  font-size: 16px;
+  line-height: 19px;
+  color: #111238;
+}
