--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,13 +1,16 @@
 *,
-*::before,
-*::after {
+*:before,
+*:after {
   box-sizing: border-box;
 }
 body {
+  margin: 0;
   font-family: "Fira Sans", sans-serif;
   font-size: 16px;
   color: #111238;
-  margin: 0;
+}
+img {
+  max-width: 100%;
 }
 .header {
   background: #f2f3f6;
@@ -46,10 +49,12 @@ body {
 }
 .button-icon {
   vertical-align: middle;
-  margin-right: 10px;
+  fill: white;
 }
+
 .button-text {
   vertical-align: middle;
+  margin-left: 10px;
 }
 .hero-title {
   font-size: 44px;
@@ -76,10 +81,10 @@ body {
   flex-grow: 1;
   font-size: 16px;
   line-height: 19px;
-  padding: 15px;
+  padding-left: 15px;
 }
 .input:focus {
-  outline-color: rgb(170, 168, 168);
+  outline: none;
 }
 .tags-group {
   padding-left: 15px;
@@ -93,11 +98,7 @@ body {
   padding: 5px 10px;
   margin-left: 10px;
   border: 1px solid #b2b2b2;
-  box-sizing: border-box;
   border-radius: 5px;
-}
-.img {
-  margin-top: 75px;
 }
 .section {
   padding-top: 70px;
@@ -113,7 +114,7 @@ body {
   background: #f2f3f6;
   border-radius: 10px;
   padding: 35px;
-  transition: background 0.4s;
+  transition: background 0.2s, color 0.2s;
 }
 .card:hover {
   background: #1a75e8;
@@ -125,20 +126,20 @@ body {
 .card-icon {
   fill: #111238;
   margin-bottom: 15px;
-  transition: fill 0.4s;
+  transition: fill 0.2s;
 }
 .offer {
   border: 1px solid #c5c9d5;
-  padding: 30px;
   border-radius: 10px;
+  padding: 30px;
   margin-bottom: 20px;
 }
-.offer-avatar {
+.offer-image {
   width: 100px;
   height: 100px;
   border-radius: 50%;
   border: 1px solid #f2f3f6;
-  background: #fff url("../img/logo-company.png") no-repeat center/ contain;
+  background: #fff url("../img/logo-company.png") no-repeat center / contain;
 }
 .offer-title {
   margin-left: 20px;
@@ -147,25 +148,24 @@ body {
   font-size: 16px;
   line-height: 19px;
   margin-bottom: 10px;
-  margin-top: 10px;
+  margin-top: 0;
 }
 .offer-place {
   font-size: 14px;
   line-height: 17px;
 }
-.salary {
+.offer-salary {
   margin-left: 46px;
   margin-right: 62px;
+  font-weight: bold;
   font-size: 16px;
   line-height: 19px;
-  font-weight: bold;
+  color: #fff;
   background: #1a75e8;
   border-radius: 5px;
   padding: 10px 25px;
-  color: #ffffff;
 }
 .more {
-  font-weight: normal;
   font-size: 14px;
   line-height: 17px;
   color: #1a75e8;
@@ -173,20 +173,20 @@ body {
   margin-left: auto;
   margin-right: 25px;
 }
-.subsc {
+.subscribe {
   background: #f2f3f6;
 }
-.subsc-form {
+.subscribe-form {
   max-width: 460px;
   margin: auto;
   text-align: center;
 }
-.subsc-title {
+.subscribe-title {
   font-size: 36px;
   line-height: 43px;
   margin-bottom: 20px;
 }
-.subsc-subtitle {
+.subscribe-subtitle {
   font-size: 18px;
   line-height: 140%;
   margin-bottom: 40px;
@@ -195,8 +195,8 @@ body {
   padding-top: 70px;
   padding-bottom: 100px;
 }
-.footer-text,
-.footer-copy {
+.footer-description,
+.footer-copyright {
   font-size: 12px;
   line-height: 140%;
   color: #b2b2b2;
@@ -218,5 +218,82 @@ body {
   margin-bottom: 10px;
   font-size: 16px;
   line-height: 19px;
+  text-decoration: none;
   color: #111238;
+}
+@media (max-width: 1200px) {
+  .offer-salary {
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+  .more {
+    margin-right: 0;
+  }
+}
+@media (max-width: 992px) {
+  .more {
+    margin-right: auto;
+    margin-left: auto;
+  }
+
+  .offer-title {
+    text-align: center;
+    margin-left: 0;
+  }
+  .tag {
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+  .navbar {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    transform: translateX(-100%);
+    transition: transform 0.3s;
+  }
+  .is-open {
+    transform: translateX(0);
+  }
+  .menu-item:not(:last-child) {
+    margin-right: 0;
+  }
+  .button-link {
+    margin-right: 0;
+  }
+  .close-button {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    text-decoration: none;
+    font-size: 24px;
+    text-align: right;
+    padding: 20px;
+  }
+}
+@media (max-width: 576px) {
+  .tags-label {
+    display: block;
+    margin-bottom: 20px;
+    text-align: center;
+  }
+  .hero {
+    text-align: center;
+  }
+  .hero-title {
+    font-size: 24px;
+    line-height: 1.4;
+  }
+  .footer {
+    text-align: center;
+  }
+  .card {
+    max-width: 250px;
+    margin: auto;
+  }
+  .section-title {
+    text-align: center;
+  }
 }
